feat(main-activity-list): create simple list with notes

--- a/implementation/app/src/main/res/layout/activity_note_editor.xml
+++ b/implementation/app/src/main/res/layout/activity_note_editor.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".NoteEditorActivity">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
-
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="413dp"
+        android:layout_height="598dp"
+        android:ems="10"
+        android:gravity="top|left"
+        android:inputType="textPersonName"
+        android:text="Name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
