--- a/implementation/app/src/main/res/layout/activity_main.xml
+++ b/implementation/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_plus24"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="TODO" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
