--- a/implementation/app/src/main/res/layout/activity_sketch_editor.xml
+++ b/implementation/app/src/main/res/layout/activity_sketch_editor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SketchEditActivity">
+    tools:context=".view.SketchEditActivity">
 
     <at.ac.univie.sketchup.view.PaintView
         android:id="@+id/paintView"
