--- a/implementation/app/src/main/res/menu/main.xml
+++ b/implementation/app/src/main/res/menu/main.xml
@@ -36,6 +36,12 @@
         android:icon="@android:drawable/ic_menu_save"
         android:title="Save"
         android:visible="true" />
+    <item
+        android:id="@+id/save_as_jpg"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="save_JPG"
+        android:visible="true"
+        app:showAsAction="always" />
 
 
 </menu>
