--- a/implementation/app/src/main/res/menu/menu.xml
+++ b/implementation/app/src/main/res/menu/menu.xml
@@ -9,7 +9,12 @@
     <item
         android:id="@+id/action1"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_save"
         android:title="Save"
         android:visible="true" />
+    <item
+        android:id="@+id/save_jpg_button"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="save_jpg"
+        android:visible="true"
+        app:showAsAction="always" />
 </menu>
