--- a/implementation/app/src/main/res/menu/main.xml
+++ b/implementation/app/src/main/res/menu/main.xml
@@ -42,6 +42,12 @@
         android:title="save_JPG"
         android:visible="true"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/savePNG"
+        android:title="Save as PNG" />
+    <item
+        android:id="@+id/saveJPEG"
+        android:title="Save as JPEG" />
 
 
 </menu>
