--- a/implementation/app/src/main/res/menu/main.xml
+++ b/implementation/app/src/main/res/menu/main.xml
@@ -28,7 +28,8 @@
     <item
         android:id="@+id/delete"
         android:title="Delete"
-        android:visible="true" />
+        android:visible="true"
+        app:showAsAction="never"/>
 
 
     <item
@@ -37,12 +38,17 @@
         android:title="save"
         android:visible="true"
         app:showAsAction="always" />
+
     <item
         android:id="@+id/savePNG"
-        android:title="Save as PNG" />
+        android:title="Save as PNG"
+        android:visible="true"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/saveJPEG"
-        android:title="Save as JPEG" />
+        android:title="Save as JPEG"
+        android:visible="true"
+        app:showAsAction="never"/>
 
 
 </menu>
